<resources>
    <string name="app_name">CharChat</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_enter_a_message">Enter a message</string>
    <string name="menu_chat">Chat</string>
    <string name="menu_search">Search</string>
    <string name="search_center_text">Click search button and enter username</string>
    <string name="not_found">Not Found!</string>
    <string name="enter_your_new_username">Enter your new username</string>
    <string name="set">Set</string>
    <string name="avatar_dialog_title">What do you want to do?</string>
    <string name="logout">Logout</string>
    <string name="menu_messages">Messages</string>
</resources>
