<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.marcinadd.charchat.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.marcinadd.charchat.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.marcinadd.charchat.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.marcinadd.charchat.ui.tools.ToolsFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.marcinadd.charchat.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.marcinadd.charchat.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />
    <fragment
        android:id="@+id/messagesListFragment"
        android:name="com.marcinadd.charchat.ui.chat.MessagesListFragment"
        android:label="fragment_messages_list"
        tools:layout="@layout/fragment_messages_list">
        <argument
            android:name="user_uid"
            android:defaultValue=" "
            app:argType="string" />
        <argument
            android:name="chat_uid"
            android:defaultValue=" "
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/nav_chat"
        android:name="com.marcinadd.charchat.ui.chat.DialogsListFragment"
        android:label="fragment_dialogs_list"
        tools:layout="@layout/fragment_dialogs_list">
        <action
            android:id="@+id/action_dialogsListFragment_to_messagesListFragment"
            app:destination="@id/messagesListFragment">
            <argument
                android:name="user_uid"
                android:defaultValue=" " />
            <argument
                android:name="chat_uid"
                android:defaultValue=" " />
        </action>
    </fragment>

</navigation>